# p4p-2025-physical-coding-blocks

./: CMakeLists.txt  README.md  embedded.uf2  mono-workspace.code-workspace  pico_sdk_import.cmake
.cache/clangd/index/: api.c.AFFBAEB6B05C9253.idx  api.h.0EECAE24E9E38118.idx  button.c.82F0CE1560B0DA2B.idx  (+13 more)
firmware/: README.md
firmware/mBot2/: NET-server.py  README.md
firmware/picow/: README.md
include/: api.h  button.h  defines.h  mbedtls_config.h  tls.h  wifi.h
picow/: .clangd  CMakeLists.txt  README.md
picow-python/: .prettierrc  api.py  api_client.py  api_next.py  button.py  commands.py  config.py  helper.py  led.py  main.py  next_api.py  test_api.py  test_commands.py  test_led.py  wifi.py  wifi_connect.py
picow/hardware/: Diagram.fzz  SR NAND.fzz  Untitled Sketch.fzz
picow/include/: api.h  defines.h  led.h  lwipopts.h  wifi.h
picow/src/: api.c  led.c  main.c
picow_blink/: CMakeLists.txt
picow_wifi_scan/: CMakeLists.txt
robot/: NET-server.py  README.md  main.py  nextjs-server.py
software/: .gitignore  .npmrc  .prettierignore  .prettierrc  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
software/app/: layout.tsx  loading.tsx  page.tsx
software/components/: command-status.tsx  contact-dialog.tsx  device-status.tsx  floating-action-button.tsx  notification-controller.tsx  qr-code-dialog.tsx  sidebar.tsx  status-badge.tsx  status-bubble.tsx  theme-switcher.tsx
software/lib/: live-commands.ts  moves.tsx  prisma.ts  routes.ts  utils.ts
software/prisma/: dev.db  schema.prisma  seed.ts
src/: api.c  wifi.c
(+112 files in other folders)
